--- a/css/style-3.css
+++ b/css/style-3.css
@@ -47,7 +47,7 @@
     display: flex;
     align-items: center;
     margin: 10px auto;
-    width: 445px;
+    width: 28.7em;
     margin-top: 80px;
     margin-bottom: 160px;
 }
@@ -97,7 +97,7 @@ button {
         margin: 1px auto;
         margin-top: 25px;
         margin-bottom: 100px;
-        width: 338px;
+        width: 22em;
     }
 
     input, button{
