--- a/css/style-3.css
+++ b/css/style-3.css
@@ -97,7 +97,8 @@ button {
         margin: 1px auto;
         margin-top: 25px;
         margin-bottom: 100px;
-        width: 22em;
+/*         width: 22em; */
+        width: 20em;
     }
 
     input, button{
