--- a/css/menu-burger.css
+++ b/css/menu-burger.css
@@ -1,5 +1,5 @@
 .block_burger_menu {
-    background-image: url('/img/bg-blur.png');
+    background-image: url('../img/bg-blur.png');
     background-size: cover;
     padding: 0 29px;
     padding-top: 71px;
