--- a/css/style-2.css
+++ b/css/style-2.css
@@ -462,7 +462,7 @@
     .Ellipse3 {
         display: block;
         position: absolute;
-        margin-top: 465px;
+        margin-top: 30em;
         margin-left: 130px;
         z-index: -1;
     }
